<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nytsearch.nytimessearch.activities.FilterActivity"
    tools:showIn="@layout/activity_filter">

    <TextView
        android:id="@+id/tvBeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="21dp"
        android:text="@string/begin_date" />

    <TextView
        android:id="@+id/tvDateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvBeginDate"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@+id/tvBeginDate"
        android:layout_toRightOf="@+id/tvBeginDate"
        android:text="Date" />

    <TextView
        android:id="@+id/tvSortOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvBeginDate"
        android:layout_alignStart="@+id/tvBeginDate"
        android:layout_below="@+id/tvBeginDate"
        android:layout_marginTop="25dp"
        android:text="@string/sort_order" />

    <Spinner
        android:id="@+id/spSortSpinner"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/tvSortOrder"
        android:layout_below="@id/tvDateValue"
        android:layout_alignTop="@+id/tvSortOrder"
        android:entries="@array/sort_array"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvNewsDesk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvBeginDate"
        android:layout_alignStart="@+id/tvBeginDate"
        android:layout_below="@+id/tvSortOrder"
        android:layout_marginTop="25dp"
        android:text="@string/news_desk_values" />

    <CheckBox android:id="@+id/cbArts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tvNewsDesk"
        android:layout_below="@id/spSortSpinner"
        android:layout_alignTop="@+id/tvNewsDesk"
        android:text="@string/arts" />

    <CheckBox android:id="@+id/cbFashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tvNewsDesk"
        android:layout_below="@+id/cbArts"
        android:text="@string/fashion_style" />

    <CheckBox android:id="@+id/cbSports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tvNewsDesk"
        android:layout_below="@id/cbFashion"
        android:text="@string/sports" />

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbSports"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/save"/>

</RelativeLayout>
